devsecops/local/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-nodeport
spec: 
  type: NodePort
  ports:
    - name: https2
      port: 9443
      protocol: TCP
      targetPort: 9443
      nodePort: 31223
  selector:
    app.kubernetes.io/instance: openvpn
    app.kubernetes.io/name: openvpn
