devsecops/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn
spec: 
  type: ClusterIP
  ports:
    - name: https
      port: 943
      protocol: TCP
      targetPort: 943
  selector:
    app.kubernetes.io/instance: openvpn
    app.kubernetes.io/name: openvpn
